# multiwindow-crash

./: index.html  package.json  pnpm-lock.yaml
src/: main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
