[package]
name = "multiwindow-crash"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { git = "https://github.com/tauri-apps/tauri", branch = "wry-git", features = [] }

[dependencies]
# Swap these to switch between the wry refactor commit and https://github.com/tauri-apps/wry/tree/temp/fabianlars (only change is this: https://github.com/tauri-apps/wry/compare/dev...temp/fabianlars)
#tauri = { git = "https://github.com/tauri-apps/tauri", rev = "b5a1db3d0548b54ad7ccad6f515db53c2e090d15", features = [] } # -> temp/fabianlars - works
tauri = { git = "https://github.com/tauri-apps/tauri", rev = "e1bc904fec55d841eb24ef80ea008e02077d93e2", features = [] } # -> refactor commit - broken
serde = { version = "1", features = ["derive"] }
serde_json = "1"

